--- a/ProyectoGuardaBarranco/src/main/res/layout/activity_main.xml
+++ b/ProyectoGuardaBarranco/src/main/res/layout/activity_main.xml
@@ -8,9 +8,24 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".Main">
 
+    <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/button"
+            android:layout_marginTop="58dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"/>
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/lbDescription"
+            android:id="@+id/textView"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/button"
+            android:layout_marginTop="11dp"/>
 
 </RelativeLayout>
